fixing low contrast red

--- a/styles/style.css
+++ b/styles/style.css
@@ -696,7 +696,7 @@ form {
 }
 
 .jacket-option.red {
-    background-color: red;
+    background-color: var(--red);
     color: var(--white);
 }
 
